<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/AddTempMenu"
        style="@style/FirebaseUI.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="181dp"
        android:fontFamily="serif-monospace"
        android:onClick="GoToAddActivity"
        android:text="@string/add_temperatureMenu"
        app:layout_constraintEnd_toEndOf="@+id/heatMapMenu"
        app:layout_constraintStart_toStartOf="@+id/heatMapMenu"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/heatMapMenu"
        style="@style/FirebaseUI.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="61dp"
        android:fontFamily="serif-monospace"
        android:onClick="GoToHeatmapActivity"
        android:text="@string/view_heat_map_menu"
        app:layout_constraintEnd_toEndOf="@+id/accountMenu"
        app:layout_constraintStart_toStartOf="@+id/accountMenu"
        app:layout_constraintTop_toBottomOf="@+id/AddTempMenu" />

    <Button
        android:id="@+id/accountMenu"
        style="@style/FirebaseUI.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="75dp"
        android:fontFamily="serif-monospace"
        android:onClick="GoToUserInfoActivity"
        android:text="@string/account_menu"
        app:layout_constraintEnd_toEndOf="@+id/userHistoryMenu"
        app:layout_constraintStart_toStartOf="@+id/userHistoryMenu"
        app:layout_constraintTop_toBottomOf="@+id/heatMapMenu" />

    <android.support.constraint.Group
        android:id="@+id/group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/userHistoryMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="65dp"
        android:layout_marginBottom="157dp"
        android:fontFamily="serif-monospace"
        android:onClick="GoToUserHistoryActivity"
        android:text="@string/historyMenuText"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/accountMenu" />
</android.support.constraint.ConstraintLayout>