<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/location__button"
        style="@style/FirebaseUI.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="75dp"
        android:fontFamily="monospace"
        android:onClick="getLocation"
        android:text="@string/get_location"
        app:layout_constraintBottom_toTopOf="@+id/locationTextView"
        app:layout_constraintEnd_toEndOf="@+id/temperatureInput"
        app:layout_constraintStart_toStartOf="@+id/temperatureInput"
        app:layout_constraintTop_toBottomOf="@+id/temperatureInput" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/temperatureInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="44dp"
        android:hint="@string/enter_temperature"
        app:layout_constraintBottom_toTopOf="@+id/location__button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:hint="@string/enter_temperature"
            android:inputType="number" />

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/locationTextView"
        android:layout_width="181dp"
        android:layout_height="0dp"
        android:layout_marginBottom="119dp"
        android:fontFamily="casual"
        android:textAlignment="viewStart"
        app:layout_constraintBottom_toTopOf="@+id/submit_data"
        app:layout_constraintEnd_toEndOf="@+id/location__button"
        app:layout_constraintStart_toStartOf="@+id/location__button"
        app:layout_constraintTop_toBottomOf="@+id/location__button" />

    <Button
        android:id="@+id/submit_data"
        style="@style/FirebaseUI.Button.AccountChooser.TwitterButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="214dp"
        android:fontFamily="monospace"
        android:onClick="submitButtonPressed"
        android:text="@string/submit_location_temp"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/locationTextView"
        app:layout_constraintStart_toStartOf="@+id/locationTextView"
        app:layout_constraintTop_toBottomOf="@+id/locationTextView" />

</android.support.constraint.ConstraintLayout>